# fabric-aml-foundry-template

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: mcp-server-containerapps-deploy.yml  train-register-deploy.yml
data/: sample_request.json
data/_monitoring/: sample_request_drifted.json
data/samples/: README.md
docs/: 00-suggested-datasets.md  02-architecture.md  05-onelake-access-runbook.md  06-deployment-journey.md  08-notebook-sequence.md  09-add-nyctaxi-to-fabric.md  11-ticket-ml-specification.md  README.md
foundry-agent/: README.md
foundry-agent/aml-mcp-server/: Dockerfile  main.py  pyproject.toml  test_holiday.py
infra/: README.md  main.bicep  main.parameters.json
monitoring/: README.md
notebooks/: 00-fabric-onelake-connectivity.ipynb  00b-register-onelake-datastore.ipynb  01-eda.ipynb  01a-copy-fabric-to-aml.ipynb  01b-nyctaxi-end-to-end.ipynb  01c-tickets-eda.ipynb  02-sklearn-training.ipynb  03-deploy-online-endpoint.ipynb  04-monitoring-setup.ipynb
pipelines/: README.md
scripts/: bootstrap-github-actions-oidc.sh  smoke_test_tickets_endpoint.py
src/: bootstrap_aml_datastores.py  build_sample_request.py  config.py  copy_fabric_to_aml.py  data.py  deploy_online_endpoint.py  load_nyctaxi_to_fabric.py  load_synth_tickets_to_fabric.py  patch_mlflow_model.py  register_onelake_datastore.py  train.py  train_tickets_from_onelake.py
src/synth_tickets/: __init__.py  _truth.py  generator.py
