[project]
name = "fabric-aml-foundry-template"
version = "0.1.0"
description = "Contoso POC: AutoML on Fabric OneLake with Azure ML monitoring"
requires-python = ">=3.11,<3.13"
dependencies = [
    "azure-ai-ml>=1.20.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azureml-mlflow>=1.57.0",
    "deltalake>=0.20.0",
    "mlflow>=2.16.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.1",
    "azure-storage-blob>=12.27.1",
    "faker>=40.15.0",
]
[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
